--- a/gamesreviewc/templates/reviews.html
+++ b/gamesreviewc/templates/reviews.html
@@ -17,37 +17,35 @@
     </a>
   </div>
 </div>
-<!--this is so that the game name appears in the collapsible drop down menu-->
-{% if game|length > 0 %}
 <ul class="collapsible">
   {% for game in game %}
-   {% for review in reviews %}
-   <li>
-      <div class="collapsible-header green darken-2 white-text">
-         <strong>{{ game.game_name }}</strong> 
+  {% for review in reviews %}
+  <li>
+    <div class="collapsible-header green white-text">
+      <i class="fa-solid fa-gamepad-modern"></i>
+      <strong>{{ game.game_name }}</strong>
+    </div>
+    <div class="collapsible-body white green-text">
+      <p>{{ review.game_review }}</p>
+      <p>{{ review.game_rating }}</p>
+      <p>{{ review.game_genre }}</p>
+      <div>
+        <a href="{{ url_for('edit_reviews', reviews_id=review.id) }}" class="btn green accent-4">Edit</a>
+        <a href="#modal-{{ reviews.id }}" class="btn red modal-trigger col m4">Delete</a>
+        <!-- Modal -->
+        <div id="modal-{{ reviews.id }}" class="modal m4">
+          <div class="modal-content col m3 green darken-2 white-text">
+            <h4>Are you sure you want to delete this Publisher?</h4>
+            <p>This action cannot be undone</p>
+          </div>
+          <div class="modal-footer green darken-2">
+            <a href="{{ url_for('delete_reviews', reviews_id=review.id) }}" class="btn-large red">Delete</a>
+          </div>
+        </div>
       </div>
-      <div class="collapsible-body white green-text darken-2">
-         <p>{{ review.game_review }}</p>
-         <p>{{ review.game_rating }}</p>
-         <p>{{ review.game_genre }}</p>
-         <div>
-          <a href="{{ url_for('edit_reviews', reviews_id=review.id) }}" class="btn yellow accent-4">Review</a>
-          <a href="#modal-{{ reviews.id }}" class="btn red modal-trigger">Delete</a>
-            <!-- Modal for delete warning message -->
-            <div id="modal-{{ game.id }}" class="modal">
-               <div class="modal-content green darken-2 white-text">
-                  <h4>Are you sure you want to delete this Game?</h4>
-                  <p>This action cannot be undone</p>
-               </div>
-               <div class="modal-footer green darken-2 white-text">
-                  <a href="{{ url_for('delete_reviews', reviews_id=review.id) }}" class="btn-large red col m3 ">Delete</a>
-               </div>
-            </div>
-         </div>
-      </div>
-   </li>
-   {% endfor %}
+    </div>
+  </li>
+  {% endfor %}
   {% endfor %}
 </ul>
-{% endif %}
 {% endblock %}
