changes to reciew function to get game name to appear

--- a/gamesreviewc/templates/reviews.html
+++ b/gamesreviewc/templates/reviews.html
@@ -20,7 +20,7 @@
 {% if game|length > 0 %}
 <ul class="collapsible">
   {% for game in game %}
-    {% for review in  %}
+    {% for review in review %}
     <li>
       <div class="collapsible-header green white-text">
          <i class="fas fa-caret-down"></i>
