--- a/gamesreviewc/templates/reviews.html
+++ b/gamesreviewc/templates/reviews.html
@@ -17,34 +17,32 @@
     </a>
   </div>
 </div>
-{% if game|length > 0 %}
 <ul class="collapsible">
-  {% for game in game %}
-    {% for review in review %}
-    <li>
-      <div class="collapsible-header green white-text">
-         <i class="fas fa-caret-down"></i>
-      </div>
-      <div class="collapsible-body">
-        <p>{{ review.game_review }}</p>
-        <p>{{ review.game_rating }}</p>
-        <p>{{ review.game_genre }}</p>
+  {% for review in reviews %}
+  <li>
+    <div class="collapsible-header green white-text">
+      <i class="fa-solid fa-gamepad-modern"></i>
+    </div>
+    <div class="collapsible-body white green-text">
+      <p>{{ review.game_review }}</p>
+      <p>{{ review.game_rating }}</p>
+      <p>{{ review.game_genre }}</p>
+      <div>
         <a href="{{ url_for('edit_reviews', reviews_id=review.id) }}" class="btn green accent-4">Edit</a>
         <a href="#modal-{{ reviews.id }}" class="btn red modal-trigger col m4">Delete</a>
-         <!-- Modal -->
-         <div id="modal-{{ associate._id }}" class="modal">
-            <div class="modal-content">
-               <h4>Are you sure you want to delete this Review?</h4>
-               <p>This action cannot be undone</p>
-            </div>
-            <div class="modal-footer">
-              <a href="{{ url_for('delete_reviews', reviews_id=review.id) }}" class="btn-large red">Delete</a>
-            </div>
-         </div>
+        <!-- Modal -->
+        <div id="modal-{{ reviews.id }}" class="modal m4">
+          <div class="modal-content col m3 green darken-2 white-text">
+            <h4>Are you sure you want to delete this Review?</h4>
+            <p>This action cannot be undone</p>
+          </div>
+          <div class="modal-footer green darken-2">
+            <a href="{{ url_for('delete_reviews', reviews_id=review.id) }}" class="btn-large red">Delete</a>
+          </div>
+        </div>
       </div>
-   </li>
-    {% endfor %}
+    </div>
+  </li>
   {% endfor %}
 </ul>
-{% endif %} 
 {% endblock %}
