--- a/gamesreviewc/static/css/style.css
+++ b/gamesreviewc/static/css/style.css
@@ -230,12 +230,12 @@ main {
 .modal .modal-footer .btn-flat {
   margin-left: 38%;
 }
-/*game modal button postioning */
+/*game modal button positioning */
 .modal .modal-footer .btn,
 .modal .modal-footer .btn-large,
 .modal .modal-footer .btn-small,
 .modal .modal-footer .btn-flat {
-  margin-right: 35%;
+  margin-right: 40%;
 }
 /* h4 and p elements */
 .modal h4 {
