505 page added to routes

--- a/gamesreviewc/templates/error.html
+++ b/gamesreviewc/templates/error.html
@@ -16,7 +16,7 @@
        <p class="center-align">
           Return to application
           <a href="{{ url_for('index.html') }}"
-             class="blue-text text-darken-4">Titan Colleague Portal</a>
+             class="blue-text text-darken-4">Games Reviews</a>
        </p>
     </div>
  </div>
