--- a/gamesreviewc/templates/base.html
+++ b/gamesreviewc/templates/base.html
@@ -36,7 +36,7 @@
           <li><a href="{{ url_for('games') }}">Games</a></li>
           <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
           <li><a href="{{ url_for('titles') }}">Titles</a></li>
-          <li><a href="{{ url_for('reviews') }}">Reveiws</a></li>
+          <li><a href="{{ url_for('reviews') }}">Reviews</a></li>
           <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
           <li><a href="{{ url_for('logout') }}">Log Out</a></li>
           {% else %}
@@ -52,14 +52,13 @@
           <li><a href="{{ url_for('games') }}">Games</a></li>
           <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
           <li><a href="{{ url_for('titles') }}">Titles</a></li>
-          <li><a href="{{ url_for('reviews') }}">Reveiws</a></li>
+          <li><a href="{{ url_for('reviews') }}">Reviews</a></li>
           <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
           <li><a href="{{ url_for('logout') }}">Log Out</a></li>
           {% else %}
           <li><a href="{{ url_for('login') }}">Login</a></li>
           <li><a href="{{ url_for('register') }}">Register</a></li>
           {% endif %}
-
         </ul>
       </div>
     </nav>
