added function to the reveiws routes to try and pull throught game names added new jinja to reveiws page to pull throught data from the database

--- a/gamesreviewc/templates/reviews.html
+++ b/gamesreviewc/templates/reviews.html
@@ -17,6 +17,7 @@
     </a>
   </div>
 </div>
+{% if game|length > 0 %}
 <ul class="collapsible">
   {% for game in game %}
    {% for review in reviews %}
