think i fixed the javascpirt

--- a/gamesreviewc/templates/index.html
+++ b/gamesreviewc/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h3 class="hide"> Reviews </h3>
 <p class="welcome"> Welcome to Games Review, this review site give the users full control. Want to add a game you can,
-  Want to add a review you can so why not pick a game and leave a reivew today! </p>
+  Want to add a review you can so why not pick a game and leave a review today! </p>
 
 <div class="slideshow-container">
 
@@ -46,6 +46,5 @@
     <img src="{{url_for('static', filename='image/kartos.png')}}" alt="4" aria-label="GOW">
   </div>
 </div>
-
-
+<script src="{{url_for('static', filename='js/index.js')}}"></script>
 {% endblock %}
