--- a/gamesreviewc/templates/titles.html
+++ b/gamesreviewc/templates/titles.html
@@ -22,29 +22,31 @@
 <ul class="collapsible">
   {% for p in publisher %}
    {% for game in game %}
+   {% if game.publisher_id == p.id %}
    <li>
-      <div class="collapsible-header green darken-2 white-text">
-         <strong>{{ p.publisher_name }}</strong> 
-      </div>
-      <div class="collapsible-body white green-text darken-2">
-         <strong>{{ game.game_name }}</strong>
-         <div>
-          <a href="{{ url_for('add_reviews', game_id=game.id) }}" class="btn yellow accent-4">Review</a>
-          <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn black">Edit</a>
-          <a href="#modal-{{ game.id }}" class="btn red modal-trigger">Delete</a>
-            <!-- Modal for delete warning message -->
-            <div id="modal-{{ game.id }}" class="modal">
-               <div class="modal-content green darken-2 white-text">
-                  <h4>Are you sure you want to delete this Game?</h4>
-                  <p>This action cannot be undone</p>
-               </div>
-               <div class="modal-footer green darken-2 white-text">
-                  <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red col m3 ">Delete</a>
-               </div>
-            </div>
-         </div>
-      </div>
-   </li>
+    <div class="collapsible-header green darken-2 white-text">
+       <strong>{{ p.publisher_name }}</strong> 
+    </div>
+    <div class="collapsible-body white green-text darken-2">
+       <strong>{{ game.game_name }}</strong>
+       <div>
+        <a href="{{ url_for('add_reviews', game_id=game.id) }}" class="btn yellow accent-4">Review</a>
+        <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn black">Edit</a>
+        <a href="#modal-{{ game.id }}" class="btn red modal-trigger">Delete</a>
+          <!-- Modal for delete warning message -->
+          <div id="modal-{{ game.id }}" class="modal">
+             <div class="modal-content green darken-2 white-text">
+                <h4>Are you sure you want to delete this Game?</h4>
+                <p>This action cannot be undone</p>
+             </div>
+             <div class="modal-footer green darken-2 white-text">
+                <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red col m3 ">Delete</a>
+             </div>
+          </div>
+       </div>
+    </div>
+ </li>
+   {% endif %}
    {% endfor %}
   {% endfor %}
 </ul>
