--- a/gamesreviewc/templates/publisher.html
+++ b/gamesreviewc/templates/publisher.html
@@ -20,7 +20,7 @@
 <div class="row">
   <div>
     {% for p in publisher  %}
-    <di class="col s12 m6 l3 transparent">
+    <div class="col s12 m6 l3 transparent">
       <div class="card green darken-2 center-align">
         <div class="card-image s12 m6 13 center-align">
           <img src="{{url_for('static', filename='image/games.png')}}" alt="game" aria-label="game picture">
@@ -44,8 +44,8 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
 </div>
-
-
 {% endfor %}
 {% endblock %}
