--- a/gamesreviewc/templates/publisher.html
+++ b/gamesreviewc/templates/publisher.html
@@ -22,7 +22,7 @@
     {% for p in publisher  %}
     <div class="col s12 m5 l3 transparent">
       <div class="card green darken-2 center-align">
-        <div class="card-image s12 m5 13 center-align">
+        <div class="card-image s12 m5 l3 center-align">
           <img src="{{url_for('static', filename='image/games.png')}}" alt="game" aria-label="game picture">
           <span class="card-title s12 m5 l3">{{ p.publisher_name }}</span>
         </div>
