--- a/gamesreviewc/static/css/style.css
+++ b/gamesreviewc/static/css/style.css
@@ -260,3 +260,12 @@ p {
 .flashes h5 {
   line-height: 2;
 }
+
+/* card ccs text to appear lower down */
+.card .card-image .card-title {
+  color: #fff;
+  bottom: 0;
+  left: 0;
+  max-width: 100%;
+  padding: 24px;
+}
