--- a/gamesreviewc/templates/add_reviews.html
+++ b/gamesreviewc/templates/add_reviews.html
@@ -17,33 +17,23 @@
     </a>
   </div>
 </div>
-<ul class="collection col s12 green darken-2" method="post" action="{{ url_for('add_reviews') }}">
-  <form method="post" action="{{ url_for('add_reviews') }}">
-    <div class="input-field col s12 white-text">{%  for review in Reviews %}
+<form class="collection col s12 green darken-2" method="post" action="{{ url_for('add_reviews') }}">
+    <div class="input-field col s12 white-text collection-item avatar green darken-2">{%  for review in Reviews %}
     <option value="{{ review.game_review}}">{{ reviews.game_review}}</option>
     {% endfor %}
-    <li class="collection-item avatar green darken-2">
       <span class="title">Review</span>
       <img src="{{url_for('static', filename='image/reveiw.png')}}" alt="" class="circle">
       <input id="game_reivew" name="game_review" minlength="20" maxlength="250" type="text" class="validate">
-      <label for="game_review">Game Review</label>
-    </li>
     </div>
-    <div class="input-field col s12 white-text">
-      <li class="collection-item avatar green darken-2">
+    <div class="input-field col s12 white-text collection-item avatar green darken-2">
         <span class="title">Game Rating</span>
         <img src="{{url_for('static', filename='image/rating.png')}}" alt="" class="circle">
         <input id="game_rating" name="game_rating" minlength="1" maxlength="10" type="text" class="validate">
-        <label for="game_rating">Game Rating</label>
-      </li>
     </div>
-    <div class="input-field col s12 white-text">
-      <li class="collection-item avatar green darken-2">
+    <div class="input-field col s12 white-text collection-item avatar green darken-2">
         <span class="title">Game Genre</span>
         <img src="{{url_for('static', filename='image/genre.png')}}" alt="" class="circle">
         <input id="game_genre" name="game_genre" minlength="3" maxlength="20" type="text" class="validate">
-        <label for="game_genre">Game Genre</label>
-      </li>
     </div>
     <!-- game id  -->
     <div class="row">
@@ -55,7 +45,6 @@
           <option value="{{ game.id }}">{{ game.game_name }}</option>
           {% endfor %}
         </select>
-        <label for="publisher_id">Game</label>
       </div>
     </div>
     <div class="row">
@@ -65,7 +54,7 @@
         </button>
       </div>
     </div>
-  </form>
-</ul>
+</form>
+
 
 {% endblock %}
