--- a/gamesreviewc/templates/login.html
+++ b/gamesreviewc/templates/login.html
@@ -15,7 +15,7 @@
                     <label for="username">Username</label>
                 </div>
             </div>
-            <!-- passowrd -->
+            <!-- password -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-user-lock prefix white-text text-darken-4"></i>
@@ -36,6 +36,4 @@
         </div>
     </form>
 </div>
-
-
 {% endblock %}
