--- a/gamesreviewc/templates/register.html
+++ b/gamesreviewc/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h3 class="center-align"></h3>
+<h3 class="hide">Register</h3>
 <div class="row">
     <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
         <div class="card-panel green darken-2">
