--- a/gamesreviewc/templates/add_game.html
+++ b/gamesreviewc/templates/add_game.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="col s12 center-align">
         <a href="{{ url_for('add_game') }}" class="btn-large green darken-2">
-            Add titles <i class="fas fa-plus-square right"></i>
+            Add titles and don`t for get to select a Publisher!! <i class="fas fa-plus-square right"></i>
         </a>
     </div>
 </div>
@@ -44,7 +44,7 @@
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
-                <button type="submit" class="btn-large green darken-2">
+                <button type="submit" class="btn-large green darken-2 required">
                     Add Games <i class="fas fa-plus-square right"></i>
                 </button>
             </div>
